# cloud-connector-routing-adapter

./: .gitignore  ANALYSIS.md  BOUNDARY.md  CHAOS.md  FEATURES.md  FUZZING.md  MAPPING.md  NOTICE  PROJECT.md  README.md  ROADMAP.md  SMOKE.md  STABLE.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci-local-test.yml  sylva-sync.yml  vyos-build-matrix.yml
artifacts/: README.md
artifacts/public/: README.md  hbr-boundary-local-summary.json  hbr-chaos-local-summary.json  hbr-fuzz-local-summary.json
examples/: node-netplan-config-desired-state.json  node-netplan-config-smoke.json  node-netplan-config-smoke.yaml  node-netplan-config.json  node-netplan-config.yaml  node-network-config-bgp-filters.json  node-network-config-evpn-fabric.json  node-network-config-smoke.json  node-network-config-smoke.yaml  node-network-config.json  node-network-config.yaml
examples/expected/: node-netplan-config.plan.txt  node-network-config.plan.txt
hbr_vyos_adapter/: __init__.py  cli.py  controller.py  k8s_documents.py  k8s_lease.py  k8s_resources.py  k8s_status.py  loader.py  models.py  reconcile.py  state.py  status.py  translator.py  vyos_api.py
k8s/crds/: node-netplan-config-crd.yaml  node-network-config-crd.yaml
k8s/runner/: runner-deployment.yaml
scripts/: api-parameter-matrix-vyos-vm.sh  boundary-hbr-api-local.py  chaos-hbr-api-local.py  check-sylva-drift.py  check_examples.sh  deeper-smoke-vyos-vm.sh  fuzz-hbr-api-local.py  lifecycle-api-matrix-vyos-vm.sh  live-fuzz-vyos-vm.sh  smoke-vyos-vm.sh  sylva-upstream.json
